#49 change "healer" to "leader"

--- a/src/agenda/atom_config.json
+++ b/src/agenda/atom_config.json
@@ -127,7 +127,7 @@
             "atom_order": 15
         }
     },
-    "agenda_idea_healerhold": {
+    "agenda_idea_leaderunit": {
         "calculated_attrs": {},
         "DELETE": {
             "atom_order": 22
