--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -25,12 +25,12 @@ jobs:
       - name: If All Tests Pass, Merge
         if: ${{ steps.pytest.conclusion == 'success' }}
         run: 
-          echo "Passed"
+          echo "${{ steps.pytest.conclusion }}"
         #nothing more to do (?), merge branch into master
       - name: If ANY Test Fails, Open Tickets
         if: ${{ steps.pytest.conclusion == 'failure' }}
         run: |
-         echo "Failed" 
+         echo "${{ steps.pytest.conclusion }}" 
         #echo ${{steps.version.outputs.FAIL_LOG}}
         #  TEST_SUMMARY_START = $(cat testresults | grep FAILURES)
         #  TEST_SUMMARY_END = $(cat testresults | grep "summary info")
