Testing if exit_code is better than conclusion.

--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -23,12 +23,12 @@ jobs:
         run: |
           python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --doctest-modules | tee testresults
       - name: If All Tests Pass, Merge
-        if: ${{ steps.pytest.conclusion == 'success' }}
+        if: ${{ steps.pytest.outputs.exit_code == '0' }}
         run: 
           echo "${{ steps.pytest.conclusion }}"
         #nothing more to do (?), merge branch into master
       - name: If ANY Test Fails, Open Tickets
-        if: ${{ steps.pytest.conclusion == 'failure' }}
+        if: ${{ steps.pytest.outputs.exit_code == '1' }}
         run: |
          echo "${{ steps.pytest.conclusion }}" 
         #echo ${{steps.version.outputs.FAIL_LOG}}
