--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -22,13 +22,14 @@ jobs:
         id: pytest
         run: |
           python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --doctest-modules | tee testresults
+          echo ::set-output name=exit_code::$?
       - name: If All Tests Pass, Merge
-        if: ${{ steps.pytest.outputs.exit_code == '0' }}
+        if: ${{ steps.pytest.outputs.exit_code == 0 }}
         run: 
           echo "${{ steps.pytest.conclusion }}"
         #nothing more to do (?), merge branch into master
       - name: If ANY Test Fails, Open Tickets
-        if: ${{ steps.pytest.outputs.exit_code == '1' }}
+        if: ${{ steps.pytest.outputs.exit_code != 0 }}
         run: |
          echo "${{ steps.pytest.conclusion }}" 
         #echo ${{steps.version.outputs.FAIL_LOG}}
