--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -22,16 +22,16 @@ jobs:
         id: pytest
         run: |
           python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --doctest-modules | tee testresults
-          echo "EXIT_CODE=$?" >> "$GITHUB_OUTPUT"
+          echo "EXIT_CODE=${PIPESTATUS[0]}" >> "$GITHUB_OUTPUT"
       - name: If All Tests Pass, Merge
         if: ${{ steps.pytest.outputs.EXIT_CODE == 0 }}
         run: 
-          echo "${{ steps.pytest.conclusion }}"
+          echo "${{ steps.pytest.outputs.EXIT_CODE }}"
         #nothing more to do (?), merge branch into master
       - name: If ANY Test Fails, Open Tickets
         if: ${{ steps.pytest.outputs.EXIT_CODE != 0 }}
         run: |
-         echo "${{ steps.pytest.conclusion }}" 
+         echo "${{ steps.pytest.outputs.EXIT_CODE }}" 
         #echo ${{steps.version.outputs.FAIL_LOG}}
         #  TEST_SUMMARY_START = $(cat testresults | grep FAILURES)
         #  TEST_SUMMARY_END = $(cat testresults | grep "summary info")
