--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -23,6 +23,10 @@ jobs:
         run: |
           python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --doctest-modules | tee testresults
           echo "EXIT_CODE=${PIPESTATUS[0]}" >> "$GITHUB_OUTPUT"
+          TEST_SUMMARY_START=$(cat testresults | grep FAILURES)
+          TEST_SUMMARY_END=$(cat testresults | grep "summary info")
+          sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
+          echo "FAIL_LOG=$(cat failure_log)" >> "$GITHUB_OUTPUT"
       - name: If All Tests Pass, Merge
         if: ${{ steps.pytest.outputs.EXIT_CODE == 0 }}
         run: 
@@ -31,7 +35,7 @@ jobs:
       - name: If ANY Test Fails, Open Tickets
         if: ${{ steps.pytest.outputs.EXIT_CODE != 0 }}
         run: |
-         echo "${{ steps.pytest.outputs.EXIT_CODE }}" 
+         echo "${{ steps.pytest.outputs.FAIL_LOG }}" 
         #echo ${{steps.version.outputs.FAIL_LOG}}
         #  TEST_SUMMARY_START = $(cat testresults | grep FAILURES)
         #  TEST_SUMMARY_END = $(cat testresults | grep "summary info")
