Rolling back slightly.

--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -24,9 +24,7 @@ jobs:
           python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --doctest-modules | tee testresults
           echo "EXIT_CODE=${PIPESTATUS[0]}" >> "$GITHUB_OUTPUT"
           TEST_SUMMARY_START=$(cat testresults | grep FAILURES)
-          TEST_SUMMARY_END=$(cat testresults | grep "summary info")
-          sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
-          echo "FAIL_LOG=$(cat failure_log)" >> "$GITHUB_OUTPUT"
+          
       - name: If All Tests Pass, Merge
         if: ${{ steps.pytest.outputs.EXIT_CODE == 0 }}
         run: 
@@ -41,6 +39,13 @@ jobs:
         #  TEST_SUMMARY_END = $(cat testresults | grep "summary info")
         #  sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
         #  echo "FAIL_LOG=$(cat failure_log)"
+
+        #TEST_SUMMARY_END=$(cat testresults | grep "summary info")
+        #  sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
+        #  echo "FAIL_LOG=$(cat failure_log)" >> "$GITHUB_OUTPUT"
+        
+        
+        
         #ok
         #what do I want/need to do here?
         #Breathe.
