--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -25,6 +25,7 @@ jobs:
           echo "EXIT_CODE=${PIPESTATUS[0]}" >> "$GITHUB_OUTPUT"
           TEST_SUMMARY_START=$(cat testresults | grep FAILURES)
           TEST_SUMMARY_END=$(cat testresults | grep "summary info")
+          sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
       - name: If All Tests Pass, Merge
         if: ${{ steps.pytest.outputs.EXIT_CODE == 0 }}
         run: 
