--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -28,7 +28,7 @@ jobs:
           sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
           F_LOG=$(cat failure_log)
           echo "FAIL_LOG=$(cat F_LOG)" >> "$GITHUB_OUTPUT"
-          echo failure_log
+          cat failure_log
       - name: If All Tests Pass, Merge
         if: ${{ steps.pytest.outputs.EXIT_CODE == 0 }}
         run: 
