Retaining formatting in the failure log.

--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -28,7 +28,7 @@ jobs:
           TEST_SUMMARY_END=$(cat testresults | grep "summary info")
           sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
           F_LOG=$(cat failure_log)
-          echo "FAIL_LOG=$(echo $F_LOG)" >> "$GITHUB_OUTPUT"
+          echo "FAIL_LOG=$(echo "$F_LOG")" >> "$GITHUB_OUTPUT"
           echo "--START LOG ECHO--"
           cat failure_log
           echo "--END LOG ECHO--"
