--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -26,12 +26,9 @@ jobs:
           TEST_SUMMARY_START=$(cat testresults | grep FAILURES)
           TEST_SUMMARY_END=$(cat testresults | grep "summary info")
           sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
-          echo "Are we failing before f_log?"
           F_LOG=$(cat failure_log)
-          echo "Are we failing before FAIL_LOG?"
           FAIL_LOG=$(echo "$F_LOG")
-          echo "Are we failing at the variable assignment?"
-          echo "$FAIL_LOG" >> "$GITHUB_OUTPUT"
+          echo "FAIL_LOG="$FAIL_LOG"" >> "$GITHUB_OUTPUT"
         #  echo "--START LOG ECHO--"
         #  cat failure_log
         #  echo "--END LOG ECHO--"
