--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -28,7 +28,7 @@ jobs:
           sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
           F_LOG=$(cat failure_log)
           FAIL_LOG=$(echo "$F_LOG")
-          echo "FAIL_LOG="$FAIL_LOG"" >> "$GITHUB_OUTPUT"
+          echo "FAILURE_LOG="$FAIL_LOG"" >> "$GITHUB_OUTPUT"
         #  echo "--START LOG ECHO--"
         #  cat failure_log
         #  echo "--END LOG ECHO--"
@@ -40,8 +40,7 @@ jobs:
       - name: If ANY Test Fails, Open A Ticket
         if: ${{ steps.pytest.outputs.EXIT_CODE != 0 }}
         run: |
-          FAILURE_LOG=${{ steps.pytest.outputs.FAIL_LOG }}
-        #  echo "$FAILURE_LOG"
+          echo "$FAILURE_LOG"
         #  echo ""${{ steps.pytest.outputs.FAIL_LOG }}"" 
         #echo ${{steps.version.outputs.FAIL_LOG}}
         #  TEST_SUMMARY_START = $(cat testresults | grep FAILURES)
