Added issue creation. Forgot to remove run key.

--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -52,8 +52,8 @@ jobs:
             status -        `${{ job.status }}`
             Log -           
           assignees: jschalk
-        run: |
-          echo ${{ steps.pytest.outputs.FAILURE_LOG }}
+        #run: |
+        #  echo ${{ steps.pytest.outputs.FAILURE_LOG }}
         #  echo ""${{ steps.pytest.outputs.FAIL_LOG }}"" 
         #echo ${{steps.version.outputs.FAIL_LOG}}
         #  TEST_SUMMARY_START = $(cat testresults | grep FAILURES)
