--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -24,13 +24,13 @@ jobs:
         id: pytest
         run: |
           python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --doctest-modules | tee testresults
-          echo "EXIT_CODE=${PIPESTATUS[0]}" >> "$GITHUB_OUTPUT"
-          TEST_SUMMARY_START=$(cat testresults | grep FAILURES)
-          TEST_SUMMARY_END=$(cat testresults | grep "summary info")
-          sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
-          F_LOG=$(cat failure_log)
-          FAIL_LOG=$(echo "$F_LOG")
-          echo "FAILURE_LOG="$FAIL_LOG"" >> "$GITHUB_OUTPUT"
+        #  echo "EXIT_CODE=${PIPESTATUS[0]}" >> "$GITHUB_OUTPUT"
+        #  TEST_SUMMARY_START=$(cat testresults | grep FAILURES)
+        #  TEST_SUMMARY_END=$(cat testresults | grep "summary info")
+        #  sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
+        #  F_LOG=$(cat failure_log)
+        #  FAIL_LOG=$(echo "$F_LOG")
+        #  echo "FAILURE_LOG="$FAIL_LOG"" >> "$GITHUB_OUTPUT"
       - name: If All Tests Pass, Merge
         if: ${{ steps.pytest.outputs.EXIT_CODE == 0 }}
         uses: devmasx/merge-branch@master
