--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -3,6 +3,8 @@ on: push
 jobs:
   run-tests:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     steps:
       - uses: actions/checkout@v4 #there are different versions of the actions/checkout action
       - name: Set up Python
@@ -22,19 +24,37 @@ jobs:
         id: pytest
         run: |
           python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --doctest-modules | tee testresults
+          echo "EXIT_CODE=${PIPESTATUS[0]}" >> "$GITHUB_OUTPUT"
+        #  TEST_SUMMARY_START=$(cat testresults | grep FAILURES)
+        #  TEST_SUMMARY_END=$(cat testresults | grep "summary info")
+        #  sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
+        #  F_LOG=$(cat failure_log)
+        #  FAIL_LOG=$(echo "$F_LOG")
+        #  echo "FAILURE_LOG="$FAIL_LOG"" >> "$GITHUB_OUTPUT"
       - name: If All Tests Pass, Merge
-        if: ${{ steps.pytest.conclusion == 'success' }}
-        run: 
-          echo "Hello"
-        #nothing more to do (?), merge branch into master
-      - name: If ANY Test Fails, Open Tickets
-        if: ${{ steps.pytest.conclusion == 'failure' }}
-        run: |
-          TEST_SUMMARY_START = $(cat testresults | grep FAILURES)
-          TEST_SUMMARY_END = $(cat testresults | grep "summary info")
-          sed -n "/$TEST_SUMMARY_START/,/$TEST_SUMMARY_END/p" testresults > failure_log
-
+        if: ${{ steps.pytest.outputs.EXIT_CODE == 0 }}
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          target_branch: main
+          message: ${{ github.run_id }} tests passed.
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: If ANY Test Fails, Open A Ticket
+        if: ${{ steps.pytest.outputs.EXIT_CODE != 0 }}
+        uses: dacbd/create-issue-action@main
+        with:
+          token: ${{github.token}}
+          title: Github Workflow/Merge Failed.
+          body: |
+            ### Context
+            [Failed Run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            [Codebase](https://github.com/${{ github.repository }}/tree/${{ github.sha }})
+            Workflow name - `${{ github.workflow }}`
+            Job -           `${{ github.job }}`
+            status -        `${{ job.status }}`
+            Log -           `${{ steps.pytest.outputs.FAILURE_LOG }}`
+          assignees: jschalk
       #TODO:
-        #clip portion of test results with failure messages
-        #open new issue
+        #clip portion of test results with failure messages [DONE]
+        #open new issue [DONE]
         #dump failure text into issue, add some other details
