--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -31,14 +31,14 @@ jobs:
         #  F_LOG=$(cat failure_log)
         #  FAIL_LOG=$(echo "$F_LOG")
         #  echo "FAILURE_LOG="$FAIL_LOG"" >> "$GITHUB_OUTPUT"
-      - name: If All Tests Pass, Merge
-        if: ${{ steps.pytest.outputs.EXIT_CODE == 0 }}
-        uses: devmasx/merge-branch@master
-        with:
-          type: now
-          target_branch: main
-          message: ${{ github.run_id }} tests passed.
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: If All Tests Pass, Merge
+      #   if: ${{ steps.pytest.outputs.EXIT_CODE == 0 }}
+      #   uses: devmasx/merge-branch@master
+      #   with:
+      #     type: now
+      #     target_branch: main
+      #     message: ${{ github.run_id }} tests passed.
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: If ANY Test Fails, Open A Ticket
         if: ${{ steps.pytest.outputs.EXIT_CODE != 0 }}
         uses: dacbd/create-issue-action@main
