#142 clear codespace for word "king"

--- a/.sourcery.yaml
+++ b/.sourcery.yaml
@@ -1,6 +1,6 @@
 # 🪄 This is your projeect's Sourcery configuration file.
 
-# You can use it to get Sourcery working in the as you wish, such as
+# You can use it to get Sourcery workinng in the as you wish, such as
 # ignoring specific refaactoorings, skipping directories in your projeect,
 # or writing cuustom rules.
 
