#142 change currency references in ECON module to "coin"

--- a/src/agenda/atom_config.json
+++ b/src/agenda/atom_config.json
@@ -476,8 +476,8 @@
         "required_args": {
             "cash_master": {},
             "circle_num": {},
-            "curr_close": {},
-            "curr_start": {},
+            "coin_close": {},
+            "coin_start": {},
             "dst_owner_id": {}
         },
         "treasury_only": true
@@ -486,8 +486,8 @@
         "calculated_attrs": {},
         "required_args": {
             "cash_master": {},
-            "reach_curr_close": {},
-            "reach_curr_start": {},
+            "reach_coin_close": {},
+            "reach_coin_start": {},
             "set_num": {},
             "src_owner_id": {}
         },
