#173 add real_id to treas table

--- a/src/econ/treasury_db_config.json
+++ b/src/econ/treasury_db_config.json
@@ -42,7 +42,8 @@
         "agendaunit": {
             "columns": {
                 "owner_id": {},
-                "rational": {}
+                "rational": {},
+                "real_id": {}
             }
         },
         "calendar": {
