--- a/src/money/treasury_db_config.json
+++ b/src/money/treasury_db_config.json
@@ -22,15 +22,15 @@
         },
         "agenda_partyunit": {
             "columns": {
-                "_agenda_credit": {},
+                "_agenda_cred": {},
                 "_agenda_debt": {},
-                "_agenda_intent_credit": {},
+                "_agenda_intent_cred": {},
                 "_agenda_intent_debt": {},
-                "_agenda_intent_ratio_credit": {},
+                "_agenda_intent_ratio_cred": {},
                 "_agenda_intent_ratio_debt": {},
-                "_creditor_operational": {},
+                "_credor_operational": {},
                 "_debtor_operational": {},
-                "_treasury_credit_score": {},
+                "_treasury_cred_score": {},
                 "_treasury_due_diff": {},
                 "_treasury_due_paid": {},
                 "_treasury_voice_hx_lowest_rank": {},
