--- a/src/atom/quark_config.json
+++ b/src/atom/quark_config.json
@@ -7,6 +7,7 @@
         "INSERT": {
             "quark_order": 1
         },
+        "normal_table_name": "partylink",
         "optional_args": {
             "credor_weight": {
                 "python_type": "int",
@@ -40,8 +41,8 @@
         "INSERT": {
             "quark_order": 2
         },
-        "optional_args": {
-        },
+        "normal_table_name": "belief",
+        "optional_args": {},
         "required_args": {
             "belief_id": {
                 "python_type": "BeliefID",
@@ -61,6 +62,7 @@
         "INSERT": {
             "quark_order": 4
         },
+        "normal_table_name": "balancelink",
         "optional_args": {
             "credor_weight": {
                 "python_type": "float",
@@ -94,6 +96,7 @@
         "INSERT": {
             "quark_order": 7
         },
+        "normal_table_name": "fact",
         "optional_args": {
             "nigh": {
                 "python_type": "float",
@@ -131,6 +134,7 @@
         "INSERT": {
             "quark_order": 6
         },
+        "normal_table_name": "healerhold",
         "optional_args": {},
         "required_args": {
             "belief_id": {
@@ -152,6 +156,7 @@
         "INSERT": {
             "quark_order": 9
         },
+        "normal_table_name": "premise",
         "optional_args": {
             "divisor": {
                 "python_type": "int",
@@ -193,6 +198,7 @@
         "INSERT": {
             "quark_order": 8
         },
+        "normal_table_name": "reason",
         "optional_args": {
             "suff_idea_active": {
                 "python_type": "bool",
@@ -222,6 +228,7 @@
         "INSERT": {
             "quark_order": 5
         },
+        "normal_table_name": "suffbelief",
         "optional_args": {},
         "required_args": {
             "belief_id": {
@@ -243,6 +250,7 @@
         "INSERT": {
             "quark_order": 3
         },
+        "normal_table_name": "idea",
         "optional_args": {
             "_addin": {
                 "python_type": "float",
@@ -316,6 +324,7 @@
         "INSERT": {
             "quark_order": 0
         },
+        "normal_table_name": "partyunit",
         "optional_args": {
             "credor_weight": {
                 "python_type": "int",
@@ -339,6 +348,7 @@
     },
     "agendaunit": {
         "calculated_attrs": {},
+        "normal_table_name": "agenda",
         "optional_args": {
             "_max_tree_traverse": {
                 "python_type": "int",
