try to fix github workflow bug

--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -20,6 +20,7 @@ jobs:
           python -m pip install plotly
           python -m pip install pytest-cov
           python -m pip install pyqt5
+          python -m pip install sqlalchemy
       - name: Execute tests and generate report
         id: pytest
         run: |
