#176 get "other" out of the codebase for future use

--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -58,4 +58,4 @@ jobs:
       #TODO:
         #clip portion of test results with failure messages [DONE]
         #open new issue [DONE]
-        #dump failure text into issue, add some other details
+        #dump failure text into issue, add some othher details
