--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,7 @@ ipython_config.py
 
 # pyenv
 #   For a library or package, you might decide to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
+#   intended to run in multiple environments; othherwise, check them in:
 # .python-version
 
 # pipenv
