#176 change "planck" to "pixel"

--- a/src/atom/quark_config.json
+++ b/src/atom/quark_config.json
@@ -396,7 +396,7 @@
                 "python_type": "float",
                 "sqlite_datatype": "REAL"
             },
-            "_planck": {
+            "_pixel": {
                 "python_type": "float",
                 "sqlite_datatype": "REAL"
             },
