replace "intent" with "agenda"

--- a/src/money/treasury_db_config.json
+++ b/src/money/treasury_db_config.json
@@ -23,10 +23,10 @@
             "columns": {
                 "_truth_cred": {},
                 "_truth_debt": {},
-                "_truth_intent_cred": {},
-                "_truth_intent_debt": {},
-                "_truth_intent_ratio_cred": {},
-                "_truth_intent_ratio_debt": {},
+                "_truth_agenda_cred": {},
+                "_truth_agenda_debt": {},
+                "_truth_agenda_ratio_cred": {},
+                "_truth_agenda_ratio_debt": {},
                 "_credor_operational": {},
                 "_debtor_operational": {},
                 "_treasury_cred_score": {},
@@ -47,13 +47,13 @@
         },
         "calendar": {
             "columns": {
-                "intent_idea_road": {},
-                "intent_weight": {},
+                "agenda_idea_road": {},
+                "agenda_weight": {},
                 "owner_id": {},
                 "report_date_range_cease": {},
                 "report_date_range_start": {},
-                "report_interval_intent_state_max_count": {},
-                "report_interval_intent_task_max_count": {},
+                "report_interval_agenda_state_max_count": {},
+                "report_interval_agenda_task_max_count": {},
                 "report_interval_length": {},
                 "report_time_road": {},
                 "task": {},
