--- a/src/gift/atom_config.json
+++ b/src/gift/atom_config.json
@@ -1,5 +1,5 @@
 {
-    "world_belief_charlink": {
+    "world_char_belieflink": {
         "calculated_attrs": {},
         "DELETE": {
             "atom_order": 25
@@ -8,7 +8,7 @@
             "atom_order": 1
         },
         "normal_specs": {
-            "normal_table_name": "charlink"
+            "normal_table_name": "belieflink"
         },
         "optional_args": {
             "credor_weight": {
@@ -35,27 +35,36 @@
             "atom_order": 12
         }
     },
-    "world_beliefunit": {
+    "world_charunit": {
         "calculated_attrs": {},
         "DELETE": {
-            "atom_order": 27
+            "atom_order": 26
         },
         "INSERT": {
-            "atom_order": 2
+            "atom_order": 0
         },
         "normal_specs": {
-            "normal_table_name": "beliefunit"
+            "normal_table_name": "charunit"
         },
-        "optional_args": {},
+        "optional_args": {
+            "credor_weight": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "debtor_weight": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            }
+        },
         "required_args": {
-            "belief_id": {
-                "python_type": "BeliefID",
+            "char_id": {
+                "python_type": "CharID",
                 "sqlite_datatype": "TEXT"
             }
         },
         "treasury_only": false,
         "UPDATE": {
-            "atom_order": 11
+            "atom_order": 10
         }
     },
     "world_idea_balancelink": {
@@ -334,44 +343,20 @@
             "atom_order": 13
         }
     },
-    "world_charunit": {
-        "calculated_attrs": {},
-        "DELETE": {
-            "atom_order": 26
-        },
-        "INSERT": {
-            "atom_order": 0
-        },
-        "normal_specs": {
-            "normal_table_name": "charunit"
-        },
-        "optional_args": {
-            "credor_weight": {
-                "python_type": "int",
-                "sqlite_datatype": "INTEGER"
-            },
-            "debtor_weight": {
-                "python_type": "int",
-                "sqlite_datatype": "INTEGER"
-            }
-        },
-        "required_args": {
-            "char_id": {
-                "python_type": "CharID",
-                "sqlite_datatype": "TEXT"
-            }
-        },
-        "treasury_only": false,
-        "UPDATE": {
-            "atom_order": 10
-        }
-    },
     "worldunit": {
         "calculated_attrs": {},
         "normal_specs": {
             "normal_table_name": "world"
         },
         "optional_args": {
+            "_char_credor_pool": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "_char_debtor_pool": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
             "_max_tree_traverse": {
                 "python_type": "int",
                 "sqlite_datatype": "INTEGER"
@@ -383,14 +368,6 @@
             "_monetary_desc": {
                 "python_type": "str",
                 "sqlite_datatype": "TEXT"
-            },
-            "_char_credor_pool": {
-                "python_type": "int",
-                "sqlite_datatype": "INTEGER"
-            },
-            "_char_debtor_pool": {
-                "python_type": "int",
-                "sqlite_datatype": "INTEGER"
             },
             "_penny": {
                 "python_type": "float",
