#221 replace "belieflink" with "beliefhold"

--- a/src/gift/atom_config.json
+++ b/src/gift/atom_config.json
@@ -1,5 +1,5 @@
 {
-    "world_char_belieflink": {
+    "world_char_beliefhold": {
         "calculated_attrs": {},
         "DELETE": {
             "atom_order": 23
@@ -8,7 +8,7 @@
             "atom_order": 1
         },
         "normal_specs": {
-            "normal_table_name": "belieflink"
+            "normal_table_name": "beliefhold"
         },
         "optional_args": {
             "credor_weight": {
